<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Switch
        android:id="@+id/serviceSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/serviceText"
        android:layout_alignParentRight="true" />
    
    <TextView
        android:id="@+id/serviceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/switch1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/serviceTextMini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/serviceText"
        android:text="@string/switchSmall"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/serviceTextMini"
        android:background="#ff6600" />

    <TextView
        android:id="@+id/bootText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/serviceText"
        android:layout_marginTop="23dp"
        android:text="@string/serviceRadio"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/bootTextMini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bootText"
        android:text="@string/serviceSmall"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/bootTextMini"
        android:background="#ff6600" />

    <TextView
        android:id="@+id/notificationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bootText"
        android:layout_marginTop="20dp"
        android:text="@string/notificationRadio"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/notiTextMini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/notificationText"
        android:text="@string/notiSmall"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/notiTextMini"
        android:background="#ff6600" />

    <Switch
        android:id="@+id/bootSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bootText"
        android:layout_alignRight="@+id/serviceSwitch" />

    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/notificationText"
        android:layout_alignRight="@+id/bootSwitch" />

</RelativeLayout>